renk özellikleri değişti

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+@theme {
+  --color-gray-20: #f8f4eb;
+  --color-gray-50: #efe6e6;
+  --color-gray-100: #dfcccc;
+  --color-gray-500: #5e0000;
+  --color-primary-100: #ffc5e3;
+  --color-primary-300: #ff81c1;
+  --color-primary-500: #e9499a;
+  --color-secondary-400: #ffcd5b;
+  --color-secondary-500: #ffc132;
+  --color-secondary-700: #f2a763;
+}
