--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,13 @@
   --color-secondary-500: #ffc132;
   --color-secondary-700: #f2a763;
 }
+
+html,
+body,
+#root,
+.app {
+  height: 100%;
+  width: 100%;
+  font-family: "DM Sans";
+  @apply text-gray-900;
+}
